# win-desktop-utils

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: adoption.md  compatibility.md  cookbook.md  design.md  feature-flags.md  integrations.md  overhead.md  side-effects.md  testing.md  trust.md  which-api.md
examples/: README.md  desktop_app.rs  ensure_paths.rs  is_elevated.rs  open.rs  paths.rs  recycle_bin.rs  restart_as_admin.rs  reveal.rs  run_with_verb.rs  shortcuts.rs  single_instance.rs  single_instance_global.rs  single_instance_options.rs
src/: app.rs  elevation.rs  error.rs  instance.rs  lib.rs  paths.rs  shell.rs  shortcuts.rs  unsupported.rs  win.rs
tests/: README.md  api_validation.rs  basic.rs  error_display.rs  non_windows_unsupported.rs  smoke.rs
xtask/: Cargo.toml
xtask/src/: main.rs
