[package]
name = "win-desktop-utils"
version = "0.2.1"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
description = "Windows-first desktop utility helpers for Rust apps"
readme = "README.md"
repository = "https://github.com/funwithcthulhu/win-desktop-utils"
homepage = "https://github.com/funwithcthulhu/win-desktop-utils"
documentation = "https://docs.rs/win-desktop-utils"
keywords = ["windows", "desktop", "win32", "shell"]
categories = ["os::windows-apis", "api-bindings"]

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
