[package]
name = "win-desktop-utils"
version = "0.5.7"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Windows desktop helpers for shell, shortcuts, app data, elevation, and single-instance Rust apps"
readme = "README.md"
repository = "https://github.com/funwithcthulhu/win-desktop-utils"
homepage = "https://github.com/funwithcthulhu/win-desktop-utils"
documentation = "https://docs.rs/win-desktop-utils"
keywords = [
    "windows",
    "desktop",
    "shortcut",
    "explorer",
    "win32",
]
categories = [
    "os::windows-apis",
    "api-bindings",
]
exclude = [
    ".cargo/**",
    ".github/**",
    "xtask/**",
]

[workspace]
members = [".", "xtask"]
default-members = ["."]
resolver = "2"

[features]
default = [
    "app",
    "elevation",
    "instance",
    "paths",
    "recycle-bin",
    "shell",
    "shortcuts",
]
app = ["instance", "paths"]
elevation = ["dep:windows"]
instance = ["dep:windows"]
paths = ["dep:windows"]
recycle-bin = ["dep:windows"]
shell = ["dep:windows"]
shortcuts = ["dep:windows"]

[[example]]
name = "desktop_app"
required-features = ["app", "shortcuts"]

[[example]]
name = "ensure_paths"
required-features = ["paths"]

[[example]]
name = "is_elevated"
required-features = ["elevation"]

[[example]]
name = "open"
required-features = ["shell"]

[[example]]
name = "paths"
required-features = ["paths"]

[[example]]
name = "recycle_bin"
required-features = ["recycle-bin"]

[[example]]
name = "restart_as_admin"
required-features = ["elevation"]

[[example]]
name = "reveal"
required-features = ["shell"]

[[example]]
name = "run_with_verb"
required-features = ["elevation"]

[[example]]
name = "shortcuts"
required-features = ["shortcuts"]

[[example]]
name = "single_instance"
required-features = ["instance"]

[[example]]
name = "single_instance_global"
required-features = ["instance"]

[[example]]
name = "single_instance_options"
required-features = ["instance"]

[[test]]
name = "api_validation"
required-features = [
    "elevation",
    "instance",
    "recycle-bin",
    "shell",
    "shortcuts",
]

[[test]]
name = "basic"
required-features = ["paths"]

[[test]]
name = "non_windows_unsupported"
required-features = [
    "app",
    "elevation",
    "instance",
    "paths",
    "recycle-bin",
    "shell",
    "shortcuts",
]

[[test]]
name = "smoke"
required-features = [
    "elevation",
    "recycle-bin",
    "shell",
    "shortcuts",
]

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
